# Brain_Stroke_Image_Analysis

./: README.md  app.py  brain_stroke_prediction.ipynb  config.py  model.py  requirements.txt  setup.cfg  setup.py  template.py
Deployment/: app.py  model.py
Notebook/: brain_stroke_prediction.ipynb  brain_stroke_prediction01.ipynb
