[metadata]
name = brain-stroke-prediction  # Replace with your package name
version = 0.1.0  # Replace with your version number
description = Brain Stroke Prediction Model
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/brain-stroke-prediction

[options]
packages = find:
python_requires = >=3.7  # Replace with your required Python version

[options.extras_require]
dev =
    black
    pytest
    isort
    flake8

[options.package_data]
# Include model.pth file in the distribution
brain_stroke_prediction = model.pth
